fix: Attempt to fix errors in Artifacthub
Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/index.yaml
+++ b/index.yaml
@@ -4272,7 +4272,7 @@ entries:
     version: 5.14.3
   - annotations:
       artifacthub.io/changes: |
-        - "[Deprecated]: Configuration option server.extraArgs."--insecure""
+        - "[Deprecated]: Configuration option server.extraArgs.'--insecure'"
     apiVersion: v2
     appVersion: v2.5.2
     created: "2022-11-25T17:40:12.056176649Z"
@@ -5544,7 +5544,7 @@ entries:
     version: 5.5.24
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: Fix missed apiVersion pattern change
+        - "[Fixed]: Fix missed apiVersion pattern change"
     apiVersion: v2
     appVersion: v2.4.14
     created: "2022-10-12T11:46:42.359185714Z"
@@ -6522,7 +6522,7 @@ entries:
     version: 5.3.6
   - annotations:
       artifacthub.io/changes: |
-        - "[Changed]: Upgrade Redis HA to 4.22.1
+        - "[Changed]: Upgrade Redis HA to 4.22.1"
     apiVersion: v2
     appVersion: v2.4.11
     created: "2022-08-26T13:38:02.831617636Z"
@@ -6957,8 +6957,8 @@ entries:
     version: 4.10.6
   - annotations:
       artifacthub.io/changes: |
-        - [Added]: Add entry and notes for admin.enabled
-        - [Added]: Add comments for server.config.dex.config
+        - "[Added]: Add entry and notes for admin.enabled"
+        - "[Added]: Add comments for server.config.dex.config"
     apiVersion: v2
     appVersion: v2.4.8
     created: "2022-08-02T10:02:13.045508305Z"
@@ -7074,8 +7074,8 @@ entries:
     version: 4.10.2
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: redis image was migrated from docker hub to public ecr for docker hub rate limit
-        - [Changed]: redis-exporter image was migrated from docker hub to public ecr for docker hub rate limit
+        - "[Changed]: redis image was migrated from docker hub to public ecr for docker hub rate limit"
+        - "[Changed]: redis-exporter image was migrated from docker hub to public ecr for docker hub rate limit"
     apiVersion: v2
     appVersion: v2.4.7
     created: "2022-07-29T14:40:59.888608406Z"
@@ -7104,7 +7104,7 @@ entries:
     version: 4.10.1
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Truncate version labels to 63 characters"
+        - "[Changed]: Truncate version labels to 63 characters"
     apiVersion: v2
     appVersion: v2.4.7
     created: "2022-07-21T09:53:45.794925788Z"
@@ -7191,7 +7191,7 @@ entries:
     version: 4.9.15
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Autoscaling now uses autoscaling/v2 apiVersion on kubernetes >= 1.23
+        - "[Changed]: Autoscaling now uses autoscaling/v2 apiVersion on kubernetes >= 1.23"
     apiVersion: v2
     appVersion: v2.4.6
     created: "2022-07-14T13:03:21.192250314Z"
@@ -7220,7 +7220,7 @@ entries:
     version: 4.9.14
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Update to app version 2.4.6"
+        - "[Changed]: Update to app version 2.4.6"
     apiVersion: v2
     appVersion: v2.4.6
     created: "2022-07-13T20:43:09.676885353Z"
@@ -7249,7 +7249,7 @@ entries:
     version: 4.9.13
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Update to app version 2.4.4"
+        - "[Changed]: Update to app version 2.4.4"
     apiVersion: v2
     appVersion: v2.4.4
     created: "2022-07-07T16:46:26.376218851Z"
@@ -7278,7 +7278,7 @@ entries:
     version: 4.9.12
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Update redis-ha dependency for better configuration options
+        - "[Changed]: Update redis-ha dependency for better configuration options"
     apiVersion: v2
     appVersion: v2.4.3
     created: "2022-06-29T13:10:23.484832965Z"
@@ -7307,7 +7307,7 @@ entries:
     version: 4.9.11
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Update redis-ha dependency for cve mitigation"
+        - "[Changed]: Update redis-ha dependency for cve mitigation"
     apiVersion: v2
     appVersion: v2.4.3
     created: "2022-06-28T15:14:24.072396056Z"
@@ -7336,7 +7336,7 @@ entries:
     version: 4.9.10
   - annotations:
       artifacthub.io/changes: |
-        - [Changed]: Update to app version 2.4.3"
+        - "[Changed]: Update to app version 2.4.3"
     apiVersion: v2
     appVersion: v2.4.3
     created: "2022-06-28T13:20:50.949257771Z"
@@ -9293,8 +9293,8 @@ entries:
     version: 3.30.1
   - annotations:
       artifacthub.io/changes: |
-        - "[Added]: Add support for Google ManagedCertificate on GKE
-        - "[Added]: Add support for Google FrontendConfig on GKE
+        - "[Added]: Add support for Google ManagedCertificate on GKE"
+        - "[Added]: Add support for Google FrontendConfig on GKE"
     apiVersion: v2
     appVersion: v2.2.2
     created: "2022-01-16T05:24:19.25311426Z"
@@ -15627,7 +15627,7 @@ entries:
     version: 2.3.2
   - annotations:
       artifacthub.io/changes: |
-        - kind: chore
+        - kind: changed
           description: Update chart icon
     apiVersion: v2
     appVersion: v1.7.6
@@ -15934,7 +15934,7 @@ entries:
     version: 2.0.9
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: use policy/v1 for poddisruptionbudgets, when available
+        - "[Fixed]: use policy/v1 for poddisruptionbudgets, when available"
     apiVersion: v2
     appVersion: v1.7.3
     created: "2022-12-15T08:33:59.057002567Z"
@@ -15957,7 +15957,7 @@ entries:
     version: 2.0.8
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)
+        - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)"
         - "[Fixed]: generated value for app.kubernetes.io/version label is now valid even when defining a controller/webhook .image.tag with a SHA digest"
         - "[Fixed]: webhook.image.tag value now overrides the tag in the webhook deployment"
     apiVersion: v2
@@ -18377,7 +18377,7 @@ entries:
     version: 0.26.2
   - annotations:
       artifacthub.io/changes: |
-        - kind: chore
+        - kind: changed
           description: Update Chart icon
     apiVersion: v2
     appVersion: v3.4.7
@@ -18398,7 +18398,7 @@ entries:
     version: 0.26.1
   - annotations:
       artifacthub.io/changes: |
-        - kind: fix
+        - kind: fixed
           description: Drop .Values.useDefaultArtifactRepo flag to simplify usage
     apiVersion: v2
     appVersion: v3.4.7
@@ -18419,7 +18419,7 @@ entries:
     version: 0.26.0
   - annotations:
       artifacthub.io/changes: |
-        - kind: fix
+        - kind: fixed
           description: Add missing argo-workflows.apiVersion.autoscaling helper function used for HPA configuration
     apiVersion: v2
     appVersion: v3.4.7
@@ -18902,7 +18902,7 @@ entries:
     version: 0.22.2
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)
+        - "[Fixed]: avoid app.kubernetes.io/version kubernetes label from exceeding maximum length (63)"
         - "[Fixed]: generated value for app.kubernetes.io/version label is now valid even when defining a controller/server/executor.image.tag with a SHA digest"
     apiVersion: v2
     appVersion: v3.4.4
@@ -19977,7 +19977,7 @@ entries:
     version: 0.11.2
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: Avoid "namespace: null" when singleNamespace is true"
+        - "[Fixed]: Avoid 'namespace: null' when singleNamespace is true"
     apiVersion: v2
     appVersion: v3.2.7
     created: "2022-03-03T14:02:26.132857563Z"
@@ -22075,7 +22075,7 @@ entries:
     version: 0.3.0
   - annotations:
       artifacthub.io/changes: |
-        - "[Fixed]: Update default values example for extraArgs
+        - "[Fixed]: Update default values example for extraArgs"
     apiVersion: v2
     appVersion: v0.10.1
     created: "2021-09-20T14:43:21.118124618Z"
@@ -22915,4 +22915,4 @@ entries:
     urls:
     - argocd-notifications-1.0.0.tgz
     version: 1.0.0
-generated: "2023-05-09T03:42:16.303591056Z"
+generated: "2023-05-09T21:30:00.303591056Z"
