--- a/charts/argo-cd/templates/redis/metrics.yaml
+++ b/charts/argo-cd/templates/redis/metrics.yaml
@@ -10,9 +10,13 @@ metadata:
     {{- with .Values.redis.metrics.service.labels }}
       {{- toYaml . | nindent 4 }}
     {{- end }}
-  {{- with .Values.redis.metrics.service.annotations }}
+  {{- if or .Values.redis.metrics.service.annotations .Values.global.addPrometheusAnnotations }}
   annotations:
-    {{- range $key, $value := . }}
+    {{- if .Values.global.addPrometheusAnnotations }}
+    prometheus.io/port: {{ .Values.redis.metrics.service.servicePort | quote }}
+    prometheus.io/scrape: "true"
+    {{- end }}
+    {{- range $key, $value := .Values.redis.metrics.service.annotations }}
     {{ $key }}: {{ $value | quote }}
     {{- end }}
   {{- end }}
