feat(argo-cd): Ability to change metrics service type and clusterIP
Signed-off-by: Marco Kilchhofer <mkilchhofer@users.noreply.github.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -28,3 +28,5 @@ annotations:
   artifacthub.io/changes: |
     - kind: added
       description: Ability to add prometheus.io/scrape annotations to all metrics services
+    - kind: added
+      description: Ability to change metrics service type and clusterIP
