chore(github): Add tico24 to codeowners
Signed-off-by: Tim Collins <tim@thecollins.team>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -2,13 +2,13 @@
 *                              @mkilchhofer @jmeridth
 
 # Argo Workflows
-/charts/argo-workflows/        @vladlosev @jmeridth @yu-croco
+/charts/argo-workflows/        @vladlosev @jmeridth @yu-croco @tico24
 
 # Argo CD
-/charts/argo-cd/               @mbevc1 @mkilchhofer @yu-croco @jmeridth @pdrastil
+/charts/argo-cd/               @mbevc1 @mkilchhofer @yu-croco @jmeridth @pdrastil @tico24
 
 # Argo Events
-/charts/argo-events/           @pdrastil @jmeridth
+/charts/argo-events/           @pdrastil @jmeridth @tico24
 
 # Argo Rollouts
 /charts/argo-rollouts/         @jmeridth
