fix(github): ignore argo-lite package so we can finalize artifacthub official-ness
Base on converation had [here](https://github.com/artifacthub/hub/issues/3052#issuecomment-1543770355)

This should finalize our getting our argo artifacthub project marked as official

Signed-off-by: jmeridth <jmeridth@gmail.com>

--- a/artifacthub-repo.yml
+++ b/artifacthub-repo.yml
@@ -1,5 +1,7 @@
 # Artifact Hub repository metadata file
 repositoryID: 05f5fe20-d21b-4413-8327-715958b51bde
 owners:
-- name: jmeridth
-  email: jmeridth@gmail.com
+  - name: jmeridth
+    email: jmeridth@gmail.com
+ignore:
+  - name: argo-lite
