--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -38,6 +38,8 @@ crds:
   keep: true
   # -- Annotations to be added to all CRDs
   annotations: {}
+  # -- Addtional labels to be added to all CRDs
+  additionalLabels: {}
 
 ## Globally shared configuration
 global:
