fix(argo-cd): Add Certificate to right component Signed-off-by: yu-croco <yu.croco@gmail.com>

--- a/charts/argo-cd/Chart.yaml
+++ b/charts/argo-cd/Chart.yaml
@@ -27,4 +27,4 @@ annotations:
     url: https://argoproj.github.io/argo-helm/pgp_keys.asc
   artifacthub.io/changes: |
     - kind: added
-      description: Ability to add certificate to Argo CD Controller
+      description: Enable to add certificate to ApplicationSet Controller
