feat(argo-cd): add lifecycle hooks to repo server (#1922)
* add lifesycle webhook to repo server

Signed-off-by: goshado <goshatoo@gmail.com>

* add lifesycle webhook to repo server

Signed-off-by: goshado <goshatoo@gmail.com>

* add lifesycle webhook to repo server

Signed-off-by: goshado <goshatoo@gmail.com>

---------

Signed-off-by: goshado <goshatoo@gmail.com>
Signed-off-by: GoshaDozoretz <106976988+gosharo@users.noreply.github.com>
Co-authored-by: goshado <goshatoo@gmail.com>

--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -275,6 +275,10 @@ spec:
           {{- toYaml .Values.repoServer.resources | nindent 10 }}
         securityContext:
           {{- toYaml .Values.repoServer.containerSecurityContext | nindent 10 }}
+        {{- with .Values.repoServer.lifecycle }}
+        lifecycle:
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
       {{- with .Values.repoServer.extraContainers }}
         {{- tpl (toYaml .) $ | nindent 6 }}
       {{- end }}
