feat(argocd-apps): add rollout strategy for ApplicationSet
Signed-off-by: Khue Doan <mail@khuedoan.com>

--- a/charts/argocd-apps/templates/applicationsets.yaml
+++ b/charts/argocd-apps/templates/applicationsets.yaml
@@ -26,6 +26,10 @@ spec:
   generators:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  {{- with .strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
   {{- with .syncPolicy }}
   syncPolicy:
     {{- toYaml . | nindent 4 }}
