--- a/charts/argo-workflows/values.yaml
+++ b/charts/argo-workflows/values.yaml
@@ -33,6 +33,8 @@ kubeVersionOverride: ""
 apiVersionOverrides:
   # -- String to override apiVersion of autoscaling rendered by this helm chart
   autoscaling: "" # autoscaling/v2
+  # -- String to override apiVersion of GKE resources rendered by this helm chart
+  cloudgoogle: "" # cloud.google.com/v1
 
 # -- Restrict Argo to operate only in a single namespace (the namespace of the
 # Helm release) by apply Roles and RoleBindings instead of the Cluster
@@ -576,7 +578,7 @@ server:
       #   hosts:
       #     - argoworkflows.example.com
 
-  # -- Create a Google Backendconfig  for use with the GKE Ingress Controller
+  ## Create a Google Backendconfig  for use with the GKE Ingress Controller
   ## https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-configuration#configuring_ingress_features_through_backendconfig_parameters
   GKEbackendConfig:
     # -- Enable BackendConfig custom resource for Google Kubernetes Engine
@@ -589,7 +591,7 @@ server:
   #      oauthclientCredentials:
   #        secretName: argoworkflows-secret
 
-  # -- Create a Google Managed Certificate for use with the GKE Ingress Controller
+  ## Create a Google Managed Certificate for use with the GKE Ingress Controller
   ## https://cloud.google.com/kubernetes-engine/docs/how-to/managed-certs
   GKEmanagedCertificate:
     # -- Enable ManagedCertificate custom resource for Google Kubernetes Engine.
@@ -598,7 +600,7 @@ server:
     domains:
     - argoworkflows.example.com
 
-  # -- Create a Google FrontendConfig Custom Resource, for use with the GKE Ingress Controller
+  ## Create a Google FrontendConfig Custom Resource, for use with the GKE Ingress Controller
   ## https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#configuring_ingress_features_through_frontendconfig_parameters
   GKEfrontendConfig:
     # -- Enable FrontConfig custom resource for Google Kubernetes Engine
