--- a/charts/argo-rollouts/values.yaml
+++ b/charts/argo-rollouts/values.yaml
@@ -106,17 +106,21 @@ controller:
   # -- flag to enable creation of cluster controller role (requires cluster RBAC)
   createClusterRole: true
 
-  healthz:
-    portName: healthz
-    port: 8080
+  # Controller container ports
+  containerPorts:
+    # -- Metrics container port
+    metrics: 8090
+    # -- Healthz container port
+    healthz: 8080
 
   metrics:
     # -- Deploy metrics service
     enabled: false
     service:
+      # -- Metrics service port name
       portName: metrics
+      # -- Metrics service port
       port: 8090
-      targetPort: 8090
     serviceMonitor:
       # -- Enable a prometheus ServiceMonitor
       enabled: false
