Allow to disable containerSecurityContext
Add a `enabled` property to allow the whole containerSecurityContext to be disabled.
Fixes https://github.com/argoproj/argo-helm/issues/2071

Signed-off-by: wim.fournier <github@fournier.nl>
Signed-off-by: Wim Fournier <github@fournier.nl>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -255,8 +255,10 @@ spec:
           failureThreshold: {{ .Values.controller.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.controller.resources | nindent 10 }}
+        {{- if .Values.controller.containerSecurityContext.enabled }}
         securityContext:
           {{- toYaml .Values.controller.containerSecurityContext | nindent 10 }}
+          {{- end }}
         workingDir: /home/argocd
         volumeMounts:
         {{- with .Values.controller.volumeMounts }}
