--- a/charts/argo-cd/values.yaml
+++ b/charts/argo-cd/values.yaml
@@ -699,6 +699,7 @@ controller:
   # -- Application controller container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
@@ -1017,6 +1018,7 @@ dex:
   # -- Dex container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
@@ -1168,6 +1170,7 @@ redis:
     # -- Redis exporter security context
     # @default -- See [values.yaml]
     containerSecurityContext:
+      enabled: true
       runAsNonRoot: true
       readOnlyRootFilesystem: true
       allowPrivilegeEscalation: false
@@ -1261,6 +1264,7 @@ redis:
   # -- Redis container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     allowPrivilegeEscalation: false
     capabilities:
       drop:
@@ -1524,6 +1528,7 @@ server:
     # -- Server UI extensions container-level security context
     # @default -- See [values.yaml]
     containerSecurityContext:
+      enabled: true
       runAsNonRoot: true
       readOnlyRootFilesystem: true
       allowPrivilegeEscalation: false
@@ -1628,6 +1633,7 @@ server:
   # -- Server container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
@@ -2159,6 +2165,7 @@ repoServer:
   # -- Repo server container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
@@ -2512,6 +2519,7 @@ applicationSet:
   # -- ApplicationSet controller container-level security context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
@@ -2850,6 +2858,7 @@ notifications:
   # -- Notification controller container-level security Context
   # @default -- See [values.yaml]
   containerSecurityContext:
+    enabled: true
     runAsNonRoot: true
     readOnlyRootFilesystem: true
     allowPrivilegeEscalation: false
