--- a/charts/argo-cd/templates/redis/deployment.yaml
+++ b/charts/argo-cd/templates/redis/deployment.yaml
@@ -77,7 +77,7 @@ spec:
           {{- toYaml .Values.redis.resources | nindent 10 }}
         {{- if .Values.redis.containerSecurityContext.enabled }}
         securityContext:
-          {{- toYaml .Values.redis.containerSecurityContext | nindent 10 }}
+          {{- omit .Values.redis.containerSecurityContext "enabled" | toYaml | nindent 10 }}
         {{- end }}
         {{- with .Values.redis.volumeMounts }}
         volumeMounts:
@@ -103,7 +103,7 @@ spec:
           {{- toYaml .Values.redis.exporter.resources | nindent 10 }}
         {{- if .Values.redis.exporter.containerSecurityContext.enabled }}
         securityContext:
-          {{- toYaml .Values.redis.exporter.containerSecurityContext | nindent 10 }}
+          {{- omit .Values.redis.exporter.containerSecurityContext "enabled" | toYaml | nindent 10 }}
           {{- end }}
       {{- end }}
       {{- with .Values.redis.extraContainers }}
