--- a/charts/argo-cd/templates/redis/deployment.yaml
+++ b/charts/argo-cd/templates/redis/deployment.yaml
@@ -41,9 +41,11 @@ spec:
       hostAliases:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if .Values.redis.containerSecurityContext.enabled }}
       {{- with .Values.redis.securityContext }}
       securityContext:
-        {{- toYaml . | nindent 8 }}
+        {{- omit . "enabled" | toYaml | nindent 8 }}
+      {{- end }}
       {{- end }}
       {{- with .Values.redis.priorityClassName | default .Values.global.priorityClassName }}
       priorityClassName: {{ . }}
