fix(argo-cd): Allow to disable containerSecurityContext (#2072)
* Allow to disable containerSecurityContext

Add a `enabled` property to allow the whole containerSecurityContext to be disabled.
Fixes https://github.com/argoproj/argo-helm/issues/2071

Signed-off-by: wim.fournier <github@fournier.nl>
Signed-off-by: Wim Fournier <github@fournier.nl>

* fix missing space

Signed-off-by: Wim Fournier <github@fournier.nl>

* remove enabled key

Signed-off-by: Wim Fournier <github@fournier.nl>

* fix typo

Signed-off-by: Wim Fournier <github@fournier.nl>

* missed one

Signed-off-by: Wim Fournier <github@fournier.nl>

* simplify using `with`, thx @pborn-ionos!

Signed-off-by: wim.fournier <wim.fournier@adevinta.com>

* missed one

Signed-off-by: wim.fournier <wim.fournier@adevinta.com>

---------

Signed-off-by: wim.fournier <github@fournier.nl>
Signed-off-by: Wim Fournier <github@fournier.nl>
Signed-off-by: wim.fournier <wim.fournier@adevinta.com>
Co-authored-by: wim.fournier <wim.fournier@adevinta.com>

--- a/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
+++ b/charts/argo-cd/templates/argocd-application-controller/statefulset.yaml
@@ -255,8 +255,10 @@ spec:
           failureThreshold: {{ .Values.controller.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.controller.resources | nindent 10 }}
+        {{- with .Values.controller.containerSecurityContext }}
         securityContext:
-          {{- toYaml .Values.controller.containerSecurityContext | nindent 10 }}
+          {{- toYaml . | nindent 10 }}
+        {{- end }}
         workingDir: /home/argocd
         volumeMounts:
         {{- with .Values.controller.volumeMounts }}
