Added missing permissions for argo rollouts dashboard cluster role - for config map, should be able to get
Signed-off-by: Tal Yitzhak <talyi@jfrog.com>

--- a/charts/argo-rollouts/templates/dashboard/clusterrole.yaml
+++ b/charts/argo-rollouts/templates/dashboard/clusterrole.yaml
@@ -71,4 +71,10 @@ rules:
     verbs:
       - list
       - watch
+  - apiGroups:
+      - ""
+    resources:
+      - configmaps
+    verbs:
+      - get
 {{- end }}
